...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />

        <EditText
            android:id="@+id/getEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="email"
...
            android:textColor="#FFFFFF"
            android:textColorHighlight="#AFB1B3"
            android:textColorHint="#FFFEFE"
            android:textColorLink="#AFB1B3" />

        <EditText
            android:id="@+id/getPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="********"
...
            android:textColor="#FFFFFF"
            android:textColorHighlight="#AFB1B3"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#AFB1B3" />

        <Spinner
            android:id="@+id/spinnerCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_background"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonUserSignIn"
        android:text="Sign In"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="2dp"
        android:layout_alignParentBottom="true"/>
...
